--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,6 @@ jobs:
       script: cd $TRAVIS_BUILD_DIR/junit5-mockito-extension && ./gradlew test
     - stage: junit5-vanilla-gradle
       script: cd $TRAVIS_BUILD_DIR/junit5-vanilla-gradle && ./gradlew test
+    - stage: junit5-vanilla-java9
+      jdk: oraclejdk9
+      script: cd $TRAVIS_BUILD_DIR/junit5-vanilla-java9 && ./build.jsh
